concord_macros/tests/dsl/fail/fail_unknown_rate_limit_profile_endpoint.rs
use concord_macros::api;

api! {
    client UnknownRateLimitProfileEndpointApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    rate_limit missing
    -> Text<String>
}

fn main() {}
