concord_macros/tests/dsl/fail/fail_unknown_rate_limit_profile_endpoint.stderr
error: unknown rate_limit profile `missing`
       no rate_limit profiles are declared
  --> tests/dsl/fail/fail_unknown_rate_limit_profile_endpoint.rs:10:16
   |
10 |     rate_limit missing
   |                ^^^^^^^
